# canpi-panel

./: .gitignore  Cargo.toml
frontend/: elm-tooling.json  elm.json  package-lock.json  package.json
frontend/src/: Main.elm  TemplateMain.elm  index.html  index.js
frontend/src/model/: LayoutJson.elm  Model.elm  Panel.elm
frontend/src/view/: CbusState.elm  Tile.elm
server/: Cargo.toml
server/panels/: cagdemo.json  holywelltown.json
server/src/: lib.rs  main.rs  models.rs  panels.rs  routes.rs  state.rs  validation.rs
server/src/handlers/: diagram_handlers.rs  general_handlers.rs  mod.rs
server/static/: CanWebElmSchema.json  canpi-panel.cfg  canpi-panel.json
server/systemd/: canpi-panel.conf  canpi-panel.service
server/templates/: base.html  index.html  top_menu.format
server/tests/: panel_list_test.rs  test_diagram.json
