[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.6.0"
dotenv = "0.15.0"
futures = "0.3.30"
glob = "0.3.1"
jsonschema = "0.18.0"
log = "0.4.21"
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simple_logger = "5.0.0"
strfmt = "0.2.4"
tera = { version = "1.20.0", features = ["builtins"] }
thiserror = "1.0.61"
time = "0.3.36"

[dev-dependencies]
actix-rt = "2.9.0"
